cabal-version:      3.0
name:               hs6502
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Tarjei Landøy
maintainer:         iskake@protonmail.com
category:           Development
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    -- Modules exported by the library.
    exposed-modules:  HS6502
                      HS6502.Debug
                      Memory
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:
        base <5,
        bytestring,
        mtl,
        vector
    -- Directories containing source files.
    hs-source-dirs:   src
    -- Base language which the package is written in.
    default-language: Haskell2010

executable hs6502
    -- Import common warning flags.
    import:           warnings
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:
        base <5,
        hs6502,
        bytestring,
        mtl
    -- Directories containing source files.
    hs-source-dirs:   app
    -- Base language which the package is written in.
    default-language: Haskell2010
